<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40pt"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5pt"
        android:paddingRight="5pt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:text="@string/select_serial_port"
            android:textColor="@color/color_white"
            android:textSize="12pt"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_devices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightBlue"
            android:textSize="12pt"
            tools:entries="@array/baudrates" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:text="@string/select_baud_rate"
            android:textColor="@color/white"
            android:textSize="12pt"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_baudrate"
            android:layout_width="60pt"
            android:layout_height="wrap_content"
            android:background="@color/colorLightBlue"
            android:textSize="12pt"
            tools:entries="@array/baudrates" />

        <Button
            android:id="@+id/btn_open_device"
            android:layout_width="wrap_content"
            android:layout_height="30pt"
            android:layout_marginLeft="5pt"
            android:text="@string/open_serial_port"
            android:textSize="12pt" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.licheedev.serialtool.activity.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_data"
                android:layout_width="match_parent"
                android:layout_height="30pt"
                android:digits="0123456789abcdefABCDEF"
                android:hint="@string/input_data"
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:text="7E000801000201ABCD"
                android:textSize="14pt" />

            <Button
                android:id="@+id/btn_send_data"
                style="@style/ButtonStyle"
                android:text="@string/send_data" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="请输入测试次数："
                    android:textSize="12pt" />

                <EditText
                    android:id="@+id/edt_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="12pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="请输入开启频率(秒):"
                    android:textSize="12pt" />

                <EditText
                    android:id="@+id/edt_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="12pt" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_stress"
                style="@style/ButtonStyle"
                android:text="@string/load_cmd_list" />

        </LinearLayout>

        <include
            layout="@layout/include_fragment_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>

